welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:8: error: ')' expected but 'else' found.
		else if(nums(c) < nums(c - 1) {
                ^